crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_lazy_fence_ends_quoted_list_item_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..25
  BLOCK_QUOTE@0..6
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    LIST@2..6
      LIST_ITEM@2..6
        LIST_MARKER@2..3 "-"
        WHITESPACE@3..4 " "
        PLAIN@4..6
          TEXT@4..5 "a"
          NEWLINE@5..6 "\n"
  CODE_BLOCK@6..25
    WHITESPACE@6..9 "   "
    CODE_FENCE_OPEN@9..13
      CODE_FENCE_MARKER@9..12 "```"
      NEWLINE@12..13 "\n"
    CODE_CONTENT@13..18
      TEXT@13..17 "   c"
      NEWLINE@17..18 "\n"
    CODE_FENCE_CLOSE@18..25
      WHITESPACE@18..21 "   "
      CODE_FENCE_MARKER@21..24 "```"
      NEWLINE@24..25 "\n"
