crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_lazy_html_block_deindents_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..27
  BLOCK_QUOTE@0..27
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..27
      HTML_BLOCK_TAG@2..8
        TEXT@2..6 "<div"
        TEXT@6..7 ">"
        NEWLINE@7..8 "\n"
      PARAGRAPH@8..18
        LINE_PREFIX@8..9 " "
        LINE_PREFIX@9..10 " "
        LINE_PREFIX@10..11 " "
        LINE_PREFIX@11..12 " "
        LINE_PREFIX@12..13 " "
        TEXT@13..17 "code"
        NEWLINE@17..18 "\n"
      HTML_BLOCK_TAG@18..27
        LINE_PREFIX@18..19 ">"
        LINE_PREFIX@19..20 " "
        TEXT@20..26 "</div>"
        NEWLINE@26..27 "\n"
