crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_lazy_line_folds_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..11
  BLOCK_QUOTE@0..6
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HEADING@2..6
      ATX_HEADING_MARKER@2..3
        ATX_HEADING_MARKER@2..3 "#"
      WHITESPACE@3..4 " "
      HEADING_CONTENT@4..5
        TEXT@4..5 "h"
      NEWLINE@5..6 "\n"
  PARAGRAPH@6..11
    TEXT@6..10 " b |"
    NEWLINE@10..11 "\n"
