crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_lazy_tilde_fence_ends_quoted_list_item_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..25
  BLOCK_QUOTE@0..25
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    LIST@2..6
      LIST_ITEM@2..6
        LIST_MARKER@2..3 "-"
        WHITESPACE@3..4 " "
        PLAIN@4..6
          TEXT@4..5 "a"
          NEWLINE@5..6 "\n"
    WHITESPACE@6..9 "   "
    CODE_BLOCK@9..25
      CODE_FENCE_OPEN@9..13
        CODE_FENCE_MARKER@9..12 "~~~"
        NEWLINE@12..13 "\n"
      CODE_CONTENT@13..18
        WHITESPACE@13..16 "   "
        TEXT@16..17 "c"
        NEWLINE@17..18 "\n"
      WHITESPACE@18..21 "   "
      CODE_FENCE_CLOSE@21..25
        CODE_FENCE_MARKER@21..24 "~~~"
        NEWLINE@24..25 "\n"
