crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_list_blockquote.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..154
  HEADING@0..64
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..63
      TEXT@2..63 "Test: Blockquote cont ..."
    NEWLINE@63..64 "\n"
  BLANK_LINE@64..65
    BLANK_LINE@64..65 "\n"
  BLOCK_QUOTE@65..154
    BLOCK_QUOTE_MARKER@65..66 ">"
    WHITESPACE@66..67 " "
    LIST@67..147
      LIST_ITEM@67..124
        LIST_MARKER@67..68 "-"
        WHITESPACE@68..69 " "
        PLAIN@69..85
          TEXT@69..84 "First list item"
          NEWLINE@84..85 "\n"
        BLOCK_QUOTE_MARKER@85..86 ">"
        BLANK_LINE@86..87
          BLANK_LINE@86..87 "\n"
        BLOCK_QUOTE_MARKER@87..88 ">"
        WHITESPACE@88..89 " "
        BLANK_LINE@89..92
          BLANK_LINE@89..92 "  \n"
        BLOCK_QUOTE_MARKER@92..93 ">"
        BLANK_LINE@93..94
          BLANK_LINE@93..94 "\n"
        PLAIN@94..124
          LINE_PREFIX@94..95 ">"
          LINE_PREFIX@95..96 " "
          TEXT@96..123 "  Back to list item c ..."
          NEWLINE@123..124 "\n"
      BLOCK_QUOTE_MARKER@124..125 ">"
      BLANK_LINE@125..126
        BLANK_LINE@125..126 "\n"
      BLOCK_QUOTE_MARKER@126..127 ">"
      WHITESPACE@127..128 " "
      LIST_ITEM@128..147
        LIST_MARKER@128..129 "-"
        WHITESPACE@129..130 " "
        PLAIN@130..147
          TEXT@130..146 "Second list item"
          NEWLINE@146..147 "\n"
    BLOCK_QUOTE_MARKER@147..148 ">"
    BLANK_LINE@148..149
      BLANK_LINE@148..149 "\n"
    BLOCK_QUOTE_MARKER@149..150 ">"
    WHITESPACE@150..151 " "
    BLANK_LINE@151..154
      BLANK_LINE@151..154 "  \n"
